--- a/drupal/sites/all/themes/checkdesk/assets/scss/_widgets.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/_widgets.scss
@@ -30,9 +30,9 @@
         // bottom: 0;
         margin-#{$alpha}: 30%;
         // #{$omega}: 0;
-        // overflow-y: auto;
+        overflow-y: auto;
         #content-inner {
-          -moz-box-sizing: border-box;
+          // -moz-box-sizing: border-box;
           @include ctb-clearfix;
           max-width: 850px;
           padding-top: $base-line-height*2;
